[tool.poetry]
name = "christmas"
version = "0.1.0"
description = ""
authors = ["Nicolas M. <mine.nicolas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.2"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
pandas = "^2.1.3"
shapely = "^2.0.2"
gprof2dot = "^2022.7.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
